--- a/ShowdownVI.csproj
+++ b/ShowdownVI.csproj
@@ -91,8 +91,10 @@
     <Compile Include="Assets\scenes\KinectView\Scripts\BodySourceView.cs" />
     <Compile Include="Assets\scripts\BallScript.cs" />
     <Compile Include="Assets\scripts\CameraController.cs" />
+    <Compile Include="Assets\scripts\GoalScript.cs" />
     <Compile Include="Assets\scripts\PaddleScript.cs" />
-    <Compile Include="Assets\scripts\Rotater.cs" />
+    <Compile Include="Assets\scripts\Utils.cs" />
+    <Compile Include="Assets\scripts\WallScript.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Plugins\x86\NuiDatabase\Expression\NuiExpressionModelManifest.txt" />
