--- a/ShowdownVI.csproj
+++ b/ShowdownVI.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2017.1.1f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -106,6 +104,7 @@
     <Compile Include="Assets\OVRAudioManager\Scripts\Utils\FastList.cs" />
     <Compile Include="Assets\OVRAudioManager\Scripts\Utils\InspectorNoteAttribute.cs" />
     <Compile Include="Assets\scripts\AIColliderScript.cs" />
+    <Compile Include="Assets\scripts\BackButton.cs" />
     <Compile Include="Assets\scripts\BallScript.cs" />
     <Compile Include="Assets\scripts\BallScriptTwoTone.cs" />
     <Compile Include="Assets\scripts\BatAI.cs" />
@@ -115,10 +114,12 @@
     <Compile Include="Assets\scripts\ExpManager.cs" />
     <Compile Include="Assets\scripts\GameUtils.cs" />
     <Compile Include="Assets\scripts\GoalScript.cs" />
+    <Compile Include="Assets\scripts\MenuScript.cs" />
     <Compile Include="Assets\scripts\MenuSpeech.cs" />
     <Compile Include="Assets\scripts\NumberSpeech.cs" />
     <Compile Include="Assets\scripts\PaddleScript.cs" />
     <Compile Include="Assets\scripts\PhoneServer.cs" />
+    <Compile Include="Assets\scripts\TutorialSounds.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Plugins\x86_64\NuiDatabase\Expression\NuiExpressionModelManifest.txt" />
