--- a/ShowdownVI.csproj
+++ b/ShowdownVI.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Assets\scripts\NumberSpeech.cs" />
     <Compile Include="Assets\scripts\PaddleScript.cs" />
     <Compile Include="Assets\scripts\PhoneServer.cs" />
+    <Compile Include="Assets\scripts\SinglePManager.cs" />
     <Compile Include="Assets\scripts\TutorialSounds.cs" />
   </ItemGroup>
   <ItemGroup>
