--- a/ShowdownVI.csproj
+++ b/ShowdownVI.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Assets\scripts\BodySourceManager.cs" />
     <Compile Include="Assets\scripts\BodySourceView.cs" />
     <Compile Include="Assets\scripts\CameraController.cs" />
+    <Compile Include="Assets\scripts\ExperimentLog.cs" />
     <Compile Include="Assets\scripts\ExpManager.cs" />
     <Compile Include="Assets\scripts\GameUtils.cs" />
     <Compile Include="Assets\scripts\GoalScript.cs" />
